[package]
name = "tiny-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
hex = "0.4.3"
once_cell = "1.21.3"
rand = "0.9.2"
secp256k1 = { version = "0.31.1", features = ["hashes", "rand", "recovery"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
